# vdb-mcp

./: .gitignore  .mcp.json  Dockerfile.indexer  Dockerfile.indexer.rust  Dockerfile.mcp  README.md  compose.yaml  mcp-server.sh  setup
embedding-server/: Dockerfile  main.py
indexer/: Cargo.toml
indexer/src/: main.rs
scripts/: index_codebase.py  requirements.txt
scripts/indexer/: __init__.py  branch_manager.py  chunker.py  file_utils.py
scripts/maintenance/: clear-and-reindex.sh  rebuild-mcp.sh  reset.sh
scripts/setup/: lib.sh
server/: index.js  package-lock.json  package.json
